Added icon; failed CSS.
My attempt to set the css failed. I believe I must switch to .qss. I
will do so eventually.

--- a/scheduler3gui.qrc
+++ b/scheduler3gui.qrc
@@ -1,3 +1,6 @@
 <RCC>
-    <qresource prefix="/Scheduler3GUI"/>
+    <qresource prefix="/Scheduler3GUI">
+        <file>scheduler3gui.css</file>
+        <file>Resources/finished_tactic-clock.ico</file>
+    </qresource>
 </RCC>
