--- a/scheduler3gui.css
+++ b/scheduler3gui.css
@@ -2,6 +2,7 @@ QMainWindow {
     background-color:darkgray;
 }
 
-QPushButton, QLabel {
-    font:600;
+QMainWindow QWidget {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size:16px;
 }
