--- a/scheduler3gui.qrc
+++ b/scheduler3gui.qrc
@@ -1,6 +1,3 @@
 <RCC>
-    <qresource prefix="/Scheduler3GUI">
-        <file>scheduler3gui.css</file>
-        <file>Resources/finished_tactic-clock.ico</file>
-    </qresource>
+    <qresource prefix="/Scheduler3GUI"/>
 </RCC>
